modules/management/main.tf

module "amis" {
  source = "../amis"

  version_license = var.management_version
  chkp_type = "management"
  custom_ami = var.custom_ami
}

resource "aws_security_group" "management_sg" {
  description = "terraform Management security group"
  vpc_id = var.vpc_id
  name_prefix = format("%s_SecurityGroup", var.management_name)
  // Group name
  tags = {
    Name = format("%s_SecurityGroup", var.management_name)
    // Resource name
    aws-apn-id = "pc:${module.amis.product_code}"
  }
  ingress {
    from_port = 257
    to_port = 257
    protocol = "tcp"
    cidr_blocks = local.gateway_ipv4_cidrs
    ipv6_cidr_blocks = local.gateway_ipv6_cidrs
  }
  ingress {
    from_port = 18191
    to_port = 18191
    protocol = "tcp"
    cidr_blocks = local.gateway_ipv4_cidrs
    ipv6_cidr_blocks = local.gateway_ipv6_cidrs
  }
  ingress {
    from_port = 18192
    to_port = 18192
    protocol = "tcp"
    cidr_blocks = local.gateway_ipv4_cidrs
    ipv6_cidr_blocks = local.gateway_ipv6_cidrs
  }
  ingress {
    from_port = 18208
    to_port = 18208
    protocol = "tcp"
    cidr_blocks = local.gateway_ipv4_cidrs
    ipv6_cidr_blocks = local.gateway_ipv6_cidrs
  }
  ingress {
    from_port = 18210
    to_port = 18210
    protocol = "tcp"
    cidr_blocks = local.gateway_ipv4_cidrs
    ipv6_cidr_blocks = local.gateway_ipv6_cidrs
  }
  ingress {
    from_port = 18211
    to_port = 18211
    protocol = "tcp"
    cidr_blocks = local.gateway_ipv4_cidrs
    ipv6_cidr_blocks = local.gateway_ipv6_cidrs
  }
  ingress {
    from_port = 18221
    to_port = 18221
    protocol = "tcp"
    cidr_blocks = local.gateway_ipv4_cidrs
    ipv6_cidr_blocks = local.gateway_ipv6_cidrs
  }
  ingress {
    from_port = 18264
    to_port = 18264
    protocol = "tcp"
    cidr_blocks = local.gateway_ipv4_cidrs
    ipv6_cidr_blocks = local.gateway_ipv6_cidrs
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = local.admin_ipv4_cidrs
    ipv6_cidr_blocks = local.admin_ipv6_cidrs
  }
  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = local.admin_ipv4_cidrs
    ipv6_cidr_blocks = local.admin_ipv6_cidrs
  }
  ingress {
    from_port = 18190
    to_port = 18190
    protocol = "tcp"
    cidr_blocks = local.admin_ipv4_cidrs
    ipv6_cidr_blocks = local.admin_ipv6_cidrs
  }
  
  ingress {
    from_port = 19009
    to_port = 19009
    protocol = "tcp"
    cidr_blocks = local.admin_ipv4_cidrs
    ipv6_cidr_blocks = local.admin_ipv6_cidrs
  }
  
  dynamic "ingress" {
    for_each = [for rule in var.security_rules : rule if rule.direction == "ingress"]
    content {
      from_port   = ingress.value.from_port
      to_port     = ingress.value.to_port
      protocol    = ingress.value.protocol
      cidr_blocks =  local.ipv4_enabled ? [for cidr in ingress.value.cidr_blocks : cidr if !strcontains(cidr, ":")] : []
      ipv6_cidr_blocks = local.ipv6_enabled ? [for cidr in ingress.value.cidr_blocks : cidr if strcontains(cidr, ":")] : []
    }
  }

  dynamic "egress" {
    for_each = [for rule in var.security_rules : rule if rule.direction == "egress"]
    content {
      from_port   = egress.value.from_port
      to_port     = egress.value.to_port
      protocol    = egress.value.protocol
      cidr_blocks =  local.ipv4_enabled ? [for cidr in egress.value.cidr_blocks : cidr if !strcontains(cidr, ":")] : []
      ipv6_cidr_blocks = local.ipv6_enabled ? [for cidr in egress.value.cidr_blocks : cidr if strcontains(cidr, ":")] : []
    }
  }  

  dynamic egress {
    for_each = length([for rule in var.security_rules : rule if rule.direction == "egress"]) == 0 ? [1] : []
    content{
        from_port    = 0
        to_port      = 0
        protocol     = "-1"
        cidr_blocks  = local.ipv4_enabled ? ["0.0.0.0/0"] : []
        ipv6_cidr_blocks  = local.ipv6_enabled ? ["::/0"] : []
    }
  }
}

resource "aws_network_interface" "external-eni" {
  subnet_id = var.subnet_id
  security_groups = [aws_security_group.management_sg.id]
  description = "eth0"
  source_dest_check = true
  ipv6_address_count = local.ipv6_enabled ? 1 : 0
  tags = {
    Name = format("%s-network_interface", var.management_name)
    aws-apn-id = "pc:${module.amis.product_code}"
  }
}

resource "aws_eip" "eip" {
  count = var.allocate_and_associate_eip && local.ipv4_enabled ? 1 : 0
  network_interface = aws_network_interface.external-eni.id
  tags = {
    aws-apn-id = "pc:${module.amis.product_code}"
  }
}

resource "aws_iam_instance_profile" "management_instance_profile" {
  count = local.pre_role
  path = "/"
  role = var.predefined_role
}

resource "aws_launch_template" "management_launch_template" {
  depends_on = [
    aws_network_interface.external-eni,
    aws_eip.eip
  ]

  instance_type = var.management_instance_type
  key_name = var.key_name
  image_id = module.amis.ami_id
  description = "Initial launch template version"
  tags = {
    aws-apn-id = "pc:${module.amis.product_code}"
  }

  iam_instance_profile {
    name = local.use_role == 1 ? (local.pre_role == 1 ? aws_iam_instance_profile.management_instance_profile[0].id : join("", (var.is_gwlb == true ? module.cme_iam_role_gwlb.*.cme_iam_profile_name : module.cme_iam_role.*.cme_iam_profile_name))): ""
  }

  metadata_options {
    http_tokens = var.metadata_imdsv2_required ? "required" : "optional"
    http_protocol_ipv6 = local.ipv6_enabled ? "enabled" : "disabled"
  }

  network_interfaces {
    network_interface_id = aws_network_interface.external-eni.id
    device_index = 0
  }
}

resource "aws_instance" "management-instance" {
  depends_on = [
    aws_launch_template.management_launch_template
  ]

  launch_template {
    id = aws_launch_template.management_launch_template.id
    version = "$Latest"
  }

  disable_api_termination = var.disable_instance_termination

  tags = merge({
    Name = var.management_name
  }, var.instance_tags, {
    aws-apn-id = "pc:${module.amis.product_code}"
  })

  ebs_block_device {
    device_name = "/dev/xvda"
    volume_type = var.volume_type
    volume_size = var.volume_size
    encrypted = local.volume_encryption_condition
    kms_key_id = local.volume_encryption_condition ? var.volume_encryption : ""
    tags = {
      aws-apn-id = "pc:${module.amis.product_code}"
    }
  }

  lifecycle {
    ignore_changes = [ebs_block_device,]
  }

  user_data = templatefile("${path.module}/management_userdata.yaml", {
    // script's arguments
    TemplateName = local.template_name,
    Hostname = var.management_hostname,
    PasswordHash = local.management_password_hash_base64,
    MaintenanceModePassword = local.maintenance_mode_password_hash_base64,
    AllowUploadDownload = var.allow_upload_download,
    NTPPrimary = var.primary_ntp
    NTPSecondary = var.secondary_ntp
    Shell = var.admin_shell,
    AdminSubnet = var.admin_cidr
    ManagementInstallationType = var.management_installation_type
    SICKey = local.management_SICkey_base64,
    OsVersion = local.version_split
    EnableInstanceConnect = var.enable_instance_connect
    AllocateElasticIP = var.allocate_and_associate_eip && local.ipv4_enabled
    GatewayManagement = var.gateway_management
    BootstrapScript = local.management_bootstrap_script64
    PubMgmt = local.pub_mgmt

  })
}

module "cme_iam_role" {
  source = "../cme_iam_role"
  count = local.new_instance_profile_general

  sts_roles = var.sts_roles
  permissions = var.iam_permissions
}

module "cme_iam_role_gwlb" {
  source = "../cme_iam_role_gwlb"
  count = local.new_instance_profile_gwlb

  sts_roles = var.sts_roles
  permissions = var.iam_permissions
}
